refactor(warnings): corrige os warnings